Создано с помощью Colaboratory

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObiFk8Uler0xdei8DJdMM0",
+      "authorship_tag": "ABX9TyOwyQG2xdXdwCpHddvPPCYW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "rUIMURRjXTdv"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "num_samples_per_class = 1000\n",
+        "negative_samples = np.random.multivariate_normal(\n",
+        "    mean=[0, 3],\n",
+        "    cov=[[1, 0.5], [0.5, 1]],\n",
+        "    size=num_samples_per_class)\n",
+        "positive_samples = np.random.multivariate_normal(\n",
+        "    mean=[3, 0],\n",
+        "    cov=[[1, 0.5], [0.5, 1]],\n",
+        "    size=num_samples_per_class)\n"
+      ]
     }
   ]
 }
