--- a/Part3.ipynb
+++ b/Part3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObiFk8Uler0xdei8DJdMM0",
+      "authorship_tag": "ABX9TyPgEGq+39R1JGnBZ/w1Cryt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,265 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "_SgEeKbF6DS-"
+        "id": "_SgEeKbF6DS-",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 658
+        },
+        "outputId": "05844510-f96d-4ccb-c2a4-e9ff9bc109ac"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[*********************100%***********************]  3 of 3 completed\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                AAPL      NFLX      TSLA\n",
+              "Date                                    \n",
+              "2010-06-30 -0.018113 -0.034908 -0.002511\n",
+              "2010-07-01 -0.012126  0.009296 -0.078473\n",
+              "2010-07-02 -0.006198 -0.023527 -0.125683\n",
+              "2010-07-06  0.006843  0.001774 -0.160937\n",
+              "2010-07-07  0.040382  0.104596 -0.019243\n",
+              "...              ...       ...       ...\n",
+              "2023-03-24  0.008306  0.025034 -0.009416\n",
+              "2023-03-27 -0.012293 -0.002223  0.007353\n",
+              "2023-03-28 -0.003980 -0.012635 -0.013659\n",
+              "2023-03-29  0.019791  0.026304  0.024790\n",
+              "2023-03-30  0.009890  0.019275  0.007221\n",
+              "\n",
+              "[3210 rows x 3 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-47f3d351-b2fc-4c1b-9894-3796b7e14e47\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>AAPL</th>\n",
+              "      <th>NFLX</th>\n",
+              "      <th>TSLA</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2010-06-30</th>\n",
+              "      <td>-0.018113</td>\n",
+              "      <td>-0.034908</td>\n",
+              "      <td>-0.002511</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-01</th>\n",
+              "      <td>-0.012126</td>\n",
+              "      <td>0.009296</td>\n",
+              "      <td>-0.078473</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-02</th>\n",
+              "      <td>-0.006198</td>\n",
+              "      <td>-0.023527</td>\n",
+              "      <td>-0.125683</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-06</th>\n",
+              "      <td>0.006843</td>\n",
+              "      <td>0.001774</td>\n",
+              "      <td>-0.160937</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2010-07-07</th>\n",
+              "      <td>0.040382</td>\n",
+              "      <td>0.104596</td>\n",
+              "      <td>-0.019243</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2023-03-24</th>\n",
+              "      <td>0.008306</td>\n",
+              "      <td>0.025034</td>\n",
+              "      <td>-0.009416</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2023-03-27</th>\n",
+              "      <td>-0.012293</td>\n",
+              "      <td>-0.002223</td>\n",
+              "      <td>0.007353</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2023-03-28</th>\n",
+              "      <td>-0.003980</td>\n",
+              "      <td>-0.012635</td>\n",
+              "      <td>-0.013659</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2023-03-29</th>\n",
+              "      <td>0.019791</td>\n",
+              "      <td>0.026304</td>\n",
+              "      <td>0.024790</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2023-03-30</th>\n",
+              "      <td>0.009890</td>\n",
+              "      <td>0.019275</td>\n",
+              "      <td>0.007221</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>3210 rows × 3 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-47f3d351-b2fc-4c1b-9894-3796b7e14e47')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-47f3d351-b2fc-4c1b-9894-3796b7e14e47 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-47f3d351-b2fc-4c1b-9894-3796b7e14e47');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
+      "source": [
+        "from traitlets import link\n",
+        "import yfinance as yf\n",
+        "# импорт данных\n",
+        "list_tickers = [\"AAPL\", \"NFLX\", \"TSLA\"]\n",
+        "database = yf.download(list_tickers)\n",
+        "# берем только скорректированную цену акций\n",
+        "database = database[\"Adj Close\"]\n",
+        "# удаляем пропущенные значения\n",
+        "data = database.dropna().pct_change(1).dropna()\n",
+        "data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "def MV_criterion(weights, data):\n",
+        "   \"\"\"Выходные данные : критерий оптимизации портфеля\n",
+        "      Входные данные :  - weight (массив ndarray numpy) \n",
+        "      вес для портфеля\n",
+        "      - data : массив ndarray numpy \n",
+        "      возврат акций\"\"\"\n",
+        "   # параметры\n",
+        "   Lambda = 3\n",
+        "   W = 1\n",
+        "   Wbar = 1 + 0.25 / 10.0\n",
+        "   # Вычисляем возврат портфеля\n",
+        "   portfolio_return = np.multiply(data, np.transponse(weights))\n",
+        "   portfolio_return = portfolio_return.sum(axis=1)"
+      ],
+      "metadata": {
+        "id": "OfuI2WE2ZVXk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
