Создано с помощью Colaboratory

--- a/Part3.ipynb
+++ b/Part3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgEGq+39R1JGnBZ/w1Cryt",
+      "authorship_tag": "ABX9TyM2d26ykCDfIx4L/ewbK6/O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -280,12 +280,20 @@
         "   Wbar = 1 + 0.25 / 10.0\n",
         "   # Вычисляем возврат портфеля\n",
         "   portfolio_return = np.multiply(data, np.transponse(weights))\n",
-        "   portfolio_return = portfolio_return.sum(axis=1)"
+        "   portfolio_return = portfolio_return.sum(axis=1)\n",
+        "   # Вычислим среднее и волантильность портфеля\n",
+        "   mean = np.mean(portfolio_return, axis = 0)\n",
+        "   std = np.std(portfolio_return, axis = 0)\n",
+        "   # вычислим кретерий\n",
+        "   criterion = Wbar ** (1 - Lambda) / (1 + Lambda) + Wbar ** (-Lambda) \\\n",
+        "   * W * mean - Lambda / 2 * Wbar**(-1 - Lambda) * W **2 * std**2\n",
+        "   criterion = - criterion\n",
+        "   return criterion\n"
       ],
       "metadata": {
         "id": "OfuI2WE2ZVXk"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
